--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
   <string name="app_name">SuperApp</string>
   <string name="main_screen_text">This is main Screen</string>
   <string name="service">Service</string>
+  <string name="start_service">Start service</string>
+  <string name="stop_service">Stop service</string>
 </resources>
