feature: показ уведомлений

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,9 @@
   <string name="service">Service</string>
   <string name="start_service">Start service</string>
   <string name="stop_service">Stop service</string>
-    <string name="enter_the_number_of_push_notifications">Enter the number of push notifications</string>
+    <string name="enter_the_number_notifications">Enter the number of notifications</string>
     <string name="insert_number">Insert the number</string>
-    <string name="service_finished">Service finished its work</string>
+    <string name="service_finished">Notifications have been shown</string>
+  <string name="service_work">Service work</string>
+  <string name="serviceNotification_still_works">Your ServiceNotification still works</string>
 </resources>
