--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="content_provider">Content provider</string>
     <string name="not_permission">Requires set permissions</string>
   <string name="not_contact">List of contacts is empty</string>
+    <string name="home">HOME</string>
 </resources>
