--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="not_permission">Requires set permissions</string>
   <string name="not_contact">List of contacts is empty</string>
     <string name="home">HOME</string>
+    <string name="textview">TextView</string>
+    <string name="list_of_contact">List of contact</string>
+    <string name="text_view">TextView</string>
 </resources>
