--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="progress_complete">Progress complete</string>
     <string name="progress_button">Progress button</string>
     <string name="success_text">Success</string>
+    <string name="buttons_text">Buttons</string>
 </resources>
