--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,11 @@
     <string name="progress_button">Progress button</string>
     <string name="success_text">Success</string>
     <string name="buttons_text">Buttons</string>
+    <string name="app_bar_text">App bar</string>
+    <string name="settings">Settings</string>
+    <string name="setting_menu">Setting menu</string>
+    <string name="like_menu">Like menu</string>
+    <string name="unlike">Unlike</string>
+    <string name="like">Like</string>
+    <string name="search">Search</string>
 </resources>
