--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="unlike">Unlike</string>
     <string name="like">Like</string>
     <string name="search">Search</string>
+    <string name="collapsing_toolbar_layout_text">CollapsingToolbarLayout</string>
 </resources>
