--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="like">Like</string>
     <string name="search">Search</string>
     <string name="collapsing_toolbar_layout_text">CollapsingToolbarLayout</string>
+    <string name="select_image">Select Image</string>
 </resources>
