add ImageView sceen take photo from camera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="collapsing_toolbar_layout_text">CollapsingToolbarLayout</string>
     <string name="select_image_from_camera">Select image from camera</string>
     <string name="select_image_from_gallery">Select image from gallery</string>
+    <string name="image_view_text">Image View</string>
 </resources>
