--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="select_image_from_gallery">Select image from gallery</string>
     <string name="image_view_text">Image View</string>
     <string name="work_manager">Work manager</string>
+    <string name="recycler_view">RecyclerView</string>
 </resources>
